[package]
name = "warp-packer"
version = "0.4.0"
authors = ["Diego Giagio <diego@giagio.com>", "knokko"]
edition = "2024"

[dependencies]
dirs = "6.0.0"
reqwest = "0.12.15"
tempdir = "0.3.7"
flate2 = "1.0"
tar = "0.4"
lazy_static = "1.1.0"

[dependencies.clap]
version = "4.5.32"
features = ["derive"]
