[package]
name = "warp-runner"
version = "0.4.5"
authors = ["Diego Giagio <diego@giagio.com>", "knokko"]
edition = "2024"

[dependencies]
memmem = "0.1.1"
flate2 = "1.0"
tar = "0.4"
dirs = "6.0.0"
tempdir = "0.3.7"
log = "0.4.5"
simple_logger = "5.0.0"

[build-dependencies]
static_vcruntime = "2.0"
